; ModuleID = '/home/carl/AnghaBench/openssl/providers/implementations/kdfs/extr_krb5kdf.c_krb5kdf_set_membuf.c'
source_filename = "/home/carl/AnghaBench/openssl/providers/implementations/kdfs/extr_krb5kdf.c_krb5kdf_set_membuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i64*, i32*)* @krb5kdf_set_membuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @krb5kdf_set_membuf(i8** %0, i64* %1, i32* %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32*, align 8
  store i8** %0, i8*** %4, align 8
  store i64* %1, i64** %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i8**, i8*** %4, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = load i64*, i64** %5, align 8
  %10 = load i64, i64* %9, align 8
  %11 = call i32 @OPENSSL_clear_free(i8* %8, i64 %10)
  %12 = load i8**, i8*** %4, align 8
  store i8* null, i8** %12, align 8
  %13 = load i32*, i32** %6, align 8
  %14 = load i8**, i8*** %4, align 8
  %15 = load i64*, i64** %5, align 8
  %16 = call i32 @OSSL_PARAM_get_octet_string(i32* %13, i8** %14, i32 0, i64* %15)
  ret i32 %16
}

declare dso_local i32 @OPENSSL_clear_free(i8*, i64) #1

declare dso_local i32 @OSSL_PARAM_get_octet_string(i32*, i8**, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
